@@ -1,5 +1,5 @@
 /*
- * $Id: vpopmail.c,v 1.28.2.16 2005-01-08 06:43:44 tomcollins Exp $
+ * $Id: vpopmail.c,v 1.28.2.17 2005-03-01 01:17:37 tomcollins Exp $
  * Copyright (C) 2000-2002 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -494,6 +494,7 @@ int vadduser( char *username, char *domain, char *password, char *gecos,
   }
         
   /* add the user to the auth backend */
+  /* NOTE: We really need to update this method to include the quota. */
   if (vauth_adduser(username, domain, password, gecos, user_hash, apop )!=0) {
     fprintf(stderr, "Failed while attempting to add user to auth backend\n");
     /* back out of changes made so far */
@@ -514,7 +515,12 @@ int vadduser( char *username, char *domain, char *password, char *gecos,
     else
       strcpy (quota, "NOQUOTA");
   }
-  vsetuserquota (username, domain, quota);
+
+  if (vsetuserquota (username, domain, quota) == VA_USER_DOES_NOT_EXIST) {
+    /* server with replication, need to wait and try again */
+    sleep(5);
+    vsetuserquota (username, domain, quota);
+  }
 
 #ifdef SQWEBMAIL_PASS
   {
@@ -1836,18 +1842,12 @@ char *dec2hex(unsigned char *digest)
 struct vqpasswd *vauth_user(char *user, char *domain, char* password, char *apop)
  {
   struct vqpasswd *mypw;
-  char *tmpstr;
-  uid_t uid;
-  gid_t gid;
  
    if ( password == NULL ) return(NULL);
    mypw = vauth_getpw(user, domain);
    if ( mypw == NULL ) return(NULL);
    if ( vauth_crypt(user, domain, password, mypw) != 0 ) return(NULL);
  
-   tmpstr = vget_assign(domain, NULL, 0, &uid, &gid );
-   mypw->pw_uid = uid;
-   mypw->pw_gid = gid;
    return(mypw);
  }
 
