@@ -27,6 +27,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- vcdb.c: be sure to close password file in vauth_getpw().
 	- md5.h: use cdb/uint32.h (built by configure)  for defining 
 	  uint32. [1144851]
+	- vpopmail.c: fix vauth_user() to not clobber pw_uid and pw_gid.
 
 	Michael Bowe
 	- configure.in: fix typo of where the configure script says it
